# bugrec

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/budget_record/: budget_record.rs  budget_record_controller.rs  budget_record_repo.rs  mod.rs
src/category/: controller.rs  entity.rs  mod.rs  repo.rs
src/common/: common_controller.rs  common_repo.rs  err_codes.rs  error.rs  mod.rs
src/http_server/: mod.rs  request_handler.rs
src/import/: merge_utils.rs  mod.rs
src/item/: item.rs  item_controller.rs  item_repo.rs  mod.rs
src/manual_purchase/: manual_purchase.rs  manual_purchase_repo.rs
src/partner/: mod.rs  partner.rs  partner_alias.rs  partner_controller.rs  partner_repo.rs
src/planning/: controller.rs  entity.rs  mod.rs  repo.rs
src/purchase/: mod.rs  purchase_controller.rs  purchase_repo.rs
src/tag/: mod.rs  tag.rs  tag_controller.rs  tag_repo.rs
src/tests/: merge_test.rs  mod.rs
src/transfer/: mod.rs  transfer_controller.rs  transfer_repo.rs
src/way_of_payment/: mod.rs  way_of_payment_repo.rs
template/: add_item.html  add_purchase.html  example.html  index.html  item_details.html  items.html  main.js  nav.html  partner_details.html  partners.html  planning.html  purchases.html  record_details.html  tags.html  tracking.html
