[package]
name = "finory_diy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
calamine = "0.21.2"
serde_json = "1.0.107"
serde = "1.0.188"
log = "0.4.20"
env_logger = "0.10.0"
handlebars = "5.1.0"
tera = "1.0"
http = { path = "../http" }
